# Strukt

./: '  CMakeLists.txt  README.md  client_settings.toml
.cache/clangd/index/: main.c.47D1CCE89AE00095.idx
Strukt/: CMakeLists.txt
Strukt/dependencies/glad/include/glad/: glad.h
Strukt/dependencies/glad/src/: glad.c
Strukt/include/Strukt/: renderer.h  strukt.h  window.h
Strukt/src/: logger.c  renderer.c  strukt.c  window.c
client/: graphics.c  graphics.h  main.c
dependencies/: CMakeLists.txt
dependencies/GLFW/: CMakeLists.txt
dependencies/cwalk/: CMakeLists.txt
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/tomlc17/: CMakeLists.txt
src/: ASCIIart.h  file.c  file_operations.c  file_operations.h  logger.c  logger.h  main.c  main.h  project_details.c  project_details.h  settings.c  settings.h  strukt.c  strukt.h
src/client/: client.h  logging.c  logging.h  renderer.c  renderer.h  settings.c  settings.h  window.c  window.h
src/logger/: logger.c  logger.h
src/window/: window.c
testbed/: CMakeLists.txt
testbed/src/: main.c
